test: cover expandable partial-output machines